2014-03-07  Corinna Vinschen  <vinschen@redhat.com>
	    Jeff Johnston  <jjohnstn@redhat.com>

	* libc/include/stdlib.h (strtold): Define if _HAVE_LONG_DOUBLE is
	defined.
	* libc/stdlib/strtold.c (strtold): Ditto.  Call strtod on systems
	with long double == double, _strtold otherwise.

2014-03-05  Corinna Vinschen  <vinschen@redhat.com>

	* libc/include/time.h (__TM_GMTOFF): Remove Cygwin-specific definition.
	(__TM_ZONE): Ditto.

2014-03-05  Corinna Vinschen  <vinschen@redhat.com>

	* libc/include/time.h (__TM_GMTOFF): Define on Cygwin.
	(__TM_ZONE): Ditto.
	(struct tm): Add __TM_GMTOFF and __TM_ZONE members if they are defined.

2014-03-04  Ed Nelson  <ed@nelson305.com>

	* libc/include/machine/_default_types.h: Define unsigned type using
	signed type macros in case unsigned type macros are not available.

2014-02-20  Agustin Henze  <tin@sluc.org.ar>

	* libm/complex/complex.tex: Fix wrong syntax in documentation.
	* libm/math/math.tex: Ditto.

2014-02-20  Corinna Vinschen  <vinschen@redhat.com>

	* libc/stdio/open_memstream.c (internal_open_memstream_r): Initialize
	c->pos to 0.

2014-02-11  Joey Ye  <joey.ye@arm.com>

	* libc/sys/arm/syscalls.c (_sbrk): Define as weak symbols.
	(_read, _write): Ditto.

2014-02-09  Corinna Vinschen  <vinschen@redhat.com>

	* libc/include/pwd.h: Include <sys/cdefs.h>.
	* libc/include/grp.h: Ditto.

2014-02-04  Matthias Braun  <matze@braunis.de>

	* libm/mathfp/sf_numtest.c: Fix NaN/Inf detection logic.

2014-01-20  Corinna Vinschen  <vinschen@redhat.com>

	* libc/include/setjmp.h (longjmp): Fix copy/paste error.

2014-01-19  Corinna Vinschen  <vinschen@redhat.com>

	* libc/include/setjmp.h (longjmp): Mark "noreturn" when building with
	GCC.

2014-01-17  Corinna Vinschen  <vinschen@redhat.com>

	* libc/include/pwd.h: Use __foo_VISIBLE macros from sys/cdefs.h.
	(setpassent): Declare.

2014-01-17  Sebastian Huber  <sebastian.huber@embedded-brains.de>

	* libc/include/sys/_default_fcntl.h (LOCK_SH): Define.
	(LOCK_EX): Likewise.