@@ -1,3 +1,7 @@
+2014-03-21  Sabrina Ni  <sabrinanitw@gmail.com>
+
+	* libc/machine/nds32/setjmp.S: Optimize.
+
 2014-03-07  Corinna Vinschen  <vinschen@redhat.com>
 	    Jeff Johnston  <jjohnstn@redhat.com>
 
